minify production css - fix mobile legibility on blog titles

--- a/app/style/site.less
+++ b/app/style/site.less
@@ -135,6 +135,7 @@ body {
 							font-size: 1.9em;
 							text-align: left;
 							letter-spacing: 1px;
+							line-height: 1.2em;
 							a {
 								color: #fff !important;
 							}
